--- a/config/reverse_proxy.tmpl
+++ b/config/reverse_proxy.tmpl
@@ -5,6 +5,6 @@ server {
   server_name ${SERVNAME};
 
   location / {
-      proxy_pass http://${DOMAIN}:${PROXY_PORT};
+      proxy_pass ${DOMAIN}:${DOMAIN_PORT};
   }
 }
